--- a/ReactJs/React_Practice/project/shagain-idea/Backend/.env
+++ b/ReactJs/React_Practice/project/shagain-idea/Backend/.env
@@ -5,7 +5,7 @@ SMS_SID = AC0c82d2516537914321034eb19f685bb5
 SMS_AUTH_TOKEN= 6fe3b14c7269e1cccdf19d06a550f832
 SMS_FROM_NUMBER=+19893345929
 SMS_FROM_EMAIL=AbhiAryaSiwan91@gmail.com
-DB_URL = mongodb://localhost:27017/shagainIdea
+DB_URL = mongodb://0.0.0.0:27017/
 BASE_URL = http://localhost:5500
 FRONT_URL=http://localhost:3000
 EMAIL = abhiarya329@gmail.com
